<resources>
    <string name="app_name">CSCB07 Project - Patient Appointment App</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Doctor">Doctor</string>
    <string name="Patient">Patient</string>
    <string name="Login_as">Login as:</string>

    <string name="BookAppointment">Book Appointment</string>
    <string name="ViewAppointment">View Appointments</string>
    <string name="hold">hold</string>
    <string name="person_icon_mimics_ta">Person icon mimics TA</string>

    <string name="Specialization_Filter">Spinner</string>
    <string name="Doctor_List">Spinner</string>
    <string name="Gender">Spinner</string>

    <string-array name="SpecializationFilter">
        <item>IMMUNOLOGY</item>
        <item>ANESTHESIOLOGY</item>
        <item>DIAGNOSTIC_RADIOLOGY</item>
        <item>EMERGENCY_MEDICINE</item>
        <item>FAMILY_MEDICINE</item>
        <item>INTERNAL_MEDICINE</item>
        <item>MEDICAL_GENETICS</item>
        <item>NEUROLOGY</item>
        <item>NUCLEAR_MEDICINE</item>
        <item>OBSTETRICS_GYNECOLOGY</item>
        <item>OPHTHALMOLOGY</item>
        <item>PATHOLOGY</item>
        <item>PEDIATRICS</item>
        <item>PHYSICAL_MEDICINE_REHABILITATION</item>
        <item>PREVENTIVE_MEDICINE</item>
        <item>PSYCHIATRY</item>
        <item>RADIATION_ONCOLOGY</item>
        <item>SURGERY</item>
        <item>UROLOGY</item>
    </string-array>

    <string-array name="DoctorsList">
        <item>Gabin Forester</item>
        <item>Kishore Ibbot</item>
        <item>Maleah Evelyn</item>
        <item>Adella Thatcher</item>
        <item>Brynlee Elwes</item>
        <item>Maryann Wilkie</item>
        <item>Cohen Brittain</item>
        <item>Laci Christian</item>
        <item>Philippe Saunders</item>
        <item>Aubree Hambleton</item>
        <item>Murali Draper</item>
        <item>Kathie Smedley</item>
        <item>Indrajit Randall</item>
        <item>Layton Norris</item>
        <item>Oriane Woodward</item>
        <item>Suzanna Stacy</item>
        <item>Tayler Adcock</item>
        <item>Harrisson Brook</item>
        <item>Josiane Hailey</item>
        <item>Georgeanna Harrelson</item>
        <item>Charleen Evered</item>
        <item>Jackson Harden</item>
        <item>Sandra Powers</item>
    </string-array>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="Patient_next_appointments">Your next appointments:</string>
    <string name="place_holder">place holder</string>
    <string name="NextAppointment">Your Next Appointments: </string>
    <string name="ExampleDate"> Wed Aug 08 2021 09:00 EDT </string>
    <string name="SeeAll"> See All </string>
    <string name="Profile"> Profile </string>
    <string name="Appointment1"> Appointment 1 </string>
    <string name="Appointment2"> Appointment 2 </string>
    <string name="Appointment3"> Appointment 3 </string>
    <string name="Appointment4"> Appointment 4 </string>
    <string name="Appointment5"> Appointment 5 </string>
    <string name="Appointment6"> Appointment 6 </string>

    <string name="Signout"> Signout </string>
    <string name="LoggedInAs"> Logged in as: </string>
    <string name="GenderString"> Gender: </string>
    <string name="SpecializationString"> Specialization: </string>
    <string name="Birthday"> Date Of Birth MM/DD/YYYY</string>

    <string name="PasswordConfirmation">Confirm Password</string>

    <string name="Book_appt"> Book Appointment </string>

    <string name="DontHaveAccount"> Don\'t have an account? </string>
    <string name="SignUpAsPatient"> Welcome! Let\'s SIGN UP as a PATIENT </string>
    <string name="SignUpAsDoctor"> Welcome! Let\'s SIGN UP as a DOCTOR </string>
    <string name="CreateAccountPatient"> Create Account as PATIENT </string>
    <string name="CreateAccountDoc"> Create Account as DOCTOR </string>
    <string name="FullName"> Full Name </string>
    <string name="Docs"> Doctors </string>
    <string name="Availabilities"> Availabilities </string>
    <string name="Filter"> Filter </string>
    <string name="email"> Email </string>

    <string name="Thankyou"> Thank you for booking the following appointment! </string>
    <string name="back_to_patient_home"> Back To Home </string>
    <string name="see_my_patients"> See My Patients </string>
    <string name="cannot_click"> Note: You can not click on these appointments. </string>
</resources>
