<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookAppointmentActivity">

    <Spinner
        android:id="@+id/DoctorSpecialization"
        android:layout_width="408dp"
        android:layout_height="41dp"
        android:layout_marginTop="136dp"
        android:entries="@array/SpecializationFilter"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/DoctorList"
        android:layout_width="406dp"
        android:layout_height="42dp"
        android:entries="@array/DoctorsList"
        android:layout_marginTop="40dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoctorSpecialization" />

    <Spinner
        android:id="@+id/Gender"
        android:layout_width="406dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:entries="@array/Gender"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Book_appt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Appointment1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoctorList" />

    <Button
        android:id="@+id/button2"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Appointment2"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="413dp"
        android:layout_height="36dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Appointment3"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="411dp"
        android:layout_height="35dp"
        android:layout_marginBottom="300dp"
        android:text="@string/Appointment4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/BookApptSignOutButton"
        android:layout_width="84dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:onClick="signOutFromBookAppts"
        android:text="@string/Signout"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


</androidx.constraintlayout.widget.ConstraintLayout>