<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button5"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:text="@string/ViewAppointment"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:text="@string/BookAppointment"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserView" />

    <TextView
        android:id="@+id/UserView"
        android:layout_width="331dp"
        android:layout_height="261dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="bottom|center_horizontal"
        android:text="@string/hold"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="133dp"
        android:layout_height="148dp"
        android:contentDescription="@string/person_icon_mimics_ta"
        app:layout_constraintBottom_toBottomOf="@+id/UserView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        app:srcCompat="@drawable/_85e4bf3cb11b227491c339a" />

    <TextView
        android:id="@+id/UserLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>